--- a/examples/providerconfig/secret.yaml.tmpl
+++ b/examples/providerconfig/secret.yaml.tmpl
@@ -1,12 +1,42 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: example-creds
+  name: spectrocloud-tenant-creds
   namespace: crossplane-system
 type: Opaque
 stringData:
   credentials: |
     {
-      "username": "admin",
-      "password": "t0ps3cr3t11"
+      "api_key": "{{ .Values.api_key }}",
+      "host": "{{ .Values.host }}",
+      "ignore_insecure_tls_error": "{{ .Values.ignore_insecure_tls_error }}",
+    }
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: spectrocloud-default-creds
+  namespace: crossplane-system
+type: Opaque
+stringData:
+  credentials: |
+    {
+      "api_key": "{{ .Values.api_key }}",
+      "host": "{{ .Values.host }}",
+      "ignore_insecure_tls_error": "{{ .Values.ignore_insecure_tls_error }}",
+      "project_name": "{{ .Values.project_name }}"
+    }
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: spectrocloud-saas-tenant-creds
+  namespace: crossplane-system
+type: Opaque
+stringData:
+  credentials: |
+    {
+      "api_key": "{{ .Values.api_key }}",
+      "host": "{{ .Values.host }}",
+      "ignore_insecure_tls_error": "{{ .Values.ignore_insecure_tls_error }}",
     }
